@@ -37,7 +37,7 @@
 # SILC Distribution versions. Set here or give the version on the command
 # line as argument.
 #
-SILC_VERSION=0.7.2			# Base version
+SILC_VERSION=0.7.3			# Base version
 
 #############################################################################
 
